[gd_scene load_steps=4 format=3 uid="uid://djatvk131nh0e"]

[ext_resource type="Script" path="res://main.gd" id="1_keaa1"]
[ext_resource type="AudioStream" uid="uid://b8bu646js7diu" path="res://sounds/walk.wav" id="2_gbwmb"]
[ext_resource type="AudioStream" uid="uid://lxsj71c5do0v" path="res://sounds/eat.ogg" id="3_a08qm"]

[node name="main" type="Node2D"]
script = ExtResource("1_keaa1")

[node name="walk_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_gbwmb")
volume_db = -12.0

[node name="eat_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a08qm")
volume_db = -6.0
pitch_scale = 0.6

[node name="music_player" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[connection signal="finished" from="music_player" to="." method="_on_music_player_finished"]
